# Connectoman

./: Cargo.toml  README.md
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: main.rs
src/routes/: error.rs  mod.rs
templates/: edit.html  index.html  layout.html  new.html  rows.html  show.html
web_folder/: color.css  styles.css
