[package]
name = "connectoman"
version = "0.1.0"
edition = "2021"
author = "Kasper Wind"
description = "Connectoman - a contact manager web app"
repository = "https://github.com/KasperWind/Connectoman"

[dependencies]
axum = { version = "0.7.1", features = ["http2"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tera = "1.19.1"
tokio = { version = "1.34.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
