[package]
name = "connectoman"
version = "0.1.0"
edition = "2024"
author = "Kasper Wind"
description = "Connectoman - a contact manager web app"
repository = "https://github.com/KasperWind/Connectoman"

[dependencies]
axum = { version = "0.8", features = ["http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
